--- a/package.json
+++ b/package.json
@@ -30,8 +30,11 @@
     "@angular/platform-server": "^20.1.0",
     "@angular/router": "^20.1.0",
     "@angular/ssr": "^20.1.4",
+    "@lottiefiles/lottie-player": "^2.0.12",
     "@tailwindcss/postcss": "^4.1.11",
     "express": "^5.1.0",
+    "lottie-web": "^5.13.0",
+    "ngx-lottie": "^20.0.0",
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.1.11",
