--- a/angular.json
+++ b/angular.json
@@ -23,7 +23,8 @@
               }
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+               "node_modules/highlight.js/styles/github.css"
             ],
             "server": "src/main.server.ts",
             "outputMode": "server",
