--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@lottiefiles/lottie-player": "^2.0.12",
     "@tailwindcss/postcss": "^4.1.11",
     "express": "^5.1.0",
+    "highlight.js": "^11.11.1",
     "lottie-web": "^5.13.0",
     "ngx-lottie": "^20.0.0",
     "postcss": "^8.5.6",
