--- a/angular.json
+++ b/angular.json
@@ -23,8 +23,7 @@
               }
             ],
             "styles": [
-              "src/styles.css",
-               "node_modules/highlight.js/styles/github.css"
+              "src/styles.css"
             ],
             "server": "src/main.server.ts",
             "outputMode": "server",
