--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@tailwindcss/postcss": "^4.1.11",
     "express": "^5.1.0",
     "lottie-web": "^5.13.0",
+    "marked": "^16.3.0",
     "ngx-highlightjs": "^14.0.1",
     "ngx-lottie": "^20.0.0",
     "postcss": "^8.5.6",
